--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@ import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 // Component Imports
-import CallToAction from '../components/CallToAction.astro';
 import Grid from '../components/Grid.astro';
 import Hero from '../components/Hero.astro';
 import Icon from '../components/Icon.astro';
@@ -13,6 +12,7 @@ import Pill from '../components/Pill.astro';
 import PortfolioPreview from '../components/PortfolioPreview.astro';
 
 // Page section components
+import About from '../components/About.astro';
 import ContactCTA from '../components/ContactCTA.astro';
 import Skills from '../components/Skills.astro';
 
@@ -21,8 +21,6 @@ const projects = (await getCollection('work'))
 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
 	.slice(0, 4);
 
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
 ---
 
 <BaseLayout>
@@ -30,14 +28,12 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hello, my name is Daniel Ho"
+					tagline="I am a Software Engineer who is currently based in Brookyln, New York."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" />Developer</Pill>
 					</div>
 				</Hero>
 
@@ -48,15 +44,16 @@ const projects = (await getCollection('work'))
 					src="/assets/portrait.jpg"
 				/>
 			</header>
+			<About />
 
 			<Skills />
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
-			<section class="section with-background with-cta">
+			<section class="section with-background with-cta" id="work">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<h3>My Work</h3>
+					<p>See my most recent projects below to get an idea of my past experience.</p>
 				</header>
 
 				<div class="gallery">
@@ -71,24 +68,24 @@ const projects = (await getCollection('work'))
 					</Grid>
 				</div>
 
-				<div class="cta">
+				<!-- <div class="cta">
 					<CallToAction href="/work/">
 						View All
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
-				</div>
+				</div> -->
 			</section>
 
-			<section class="section with-background bg-variant">
-				<header class="section-header stack gap-2 lg:gap-4">
+			<!-- <section class="section with-background bg-variant"> -->
+				<!-- <header class="section-header stack gap-2 lg:gap-4">
 					<h3>Mentions</h3>
 					<p>
 						I have been fortunate enough to recieve praise for my work in several publications. Take
 						a look below to learn more.
 					</p>
-				</header>
+				</header> -->
 
-				<div class="gallery">
+				<!-- <div class="gallery">
 					<Grid variant="small">
 						{
 							['Medium', 'BuzzFeed', 'The Next Web', 'awwwards.', 'TechCrunch'].map((brand) => (
@@ -98,8 +95,8 @@ const projects = (await getCollection('work'))
 							))
 						}
 					</Grid>
-				</div>
-			</section>
+				</div> -->
+			<!-- </section> -->
 		</main>
 
 		<ContactCTA />
