--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,9 @@ const projects = (await getCollection('work'))
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
-			<section class="section with-background with-cta" id="work">
+			<section class="section with-background" id="work">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>My Work</h3>
+					<h3>My Projects</h3>
 					<p>See my most recent projects below to get an idea of my past experience.</p>
 				</header>
 
@@ -67,13 +67,6 @@ const projects = (await getCollection('work'))
 						}
 					</Grid>
 				</div>
-
-				<!-- <div class="cta">
-					<CallToAction href="/work/">
-						View All
-						<Icon icon="arrow-right" size="1.2em" />
-					</CallToAction>
-				</div> -->
 			</section>
 
 			<!-- <section class="section with-background bg-variant"> -->
