--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import type { iconPaths } from './IconPaths';
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Home', href: '/' },
-	{ label: 'About', href: '/#about/' },
+	{ label: 'About', href: '/#about' },
 	{ label: 'Skill', href: '/#skills' },
 	{ label: 'Work', href: '/#work' },
 ];
