--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,10 +38,10 @@ const projects = (await getCollection('work'))
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Daniel Ho"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/assets/picture.jpg"
 				/>
 			</header>
 			<About />
@@ -220,7 +220,7 @@ const projects = (await getCollection('work'))
 
 	/* ====================================================== */
 
-	.mention-card {
+	/* .mention-card {
 		display: flex;
 		height: 7rem;
 		justify-content: center;
@@ -237,6 +237,6 @@ const projects = (await getCollection('work'))
 		.mention-card {
 			border-radius: 1.5rem;
 			height: 9.5rem;
-		}
-	}
+		} */
+	/* } */
 </style>
