--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,7 +1,8 @@
 ---
 import Hero from './Hero.astro';
+import SkillCategory from './SkillCategory.astro';
 
-const skills = [
+const languages = [
   { path: "html5.svg", alt: "HTML5", modeClasses: [] },
   { path: "css3.svg", alt: "CSS3", modeClasses: [] },
   { path: "javascript.svg", alt: "JavaScript", modeClasses: [] },
@@ -36,78 +37,26 @@ const others = [
 	<Hero 
 		title="My Skills" 
 		tagline="Passionate about learning and mastering new technologies."
-		align="start">
+		align="center">
 	</Hero>
 
-	<!-- Render Languages and Tools -->
 	<div class="skills-content">
-		<div>
-			<h5>Languages and Tools</h5>
-			<div class="images-container">
-			{skills.map(skill => (
-				<img
-				src={`../../public/assets/stack-icons/${skill.path}`}
-				alt={skill.alt}
-				class={`logo ${skill.modeClasses.join(' ')}`}
-				/>
-			))}
-			</div>
-		</div>
+		<!-- Render Languages and Tools -->
+		<SkillCategory title="Languages and Tools" skills={languages} />
 
 		<!-- Render Libraries and Frameworks -->
-		<div>
-			<h5>Libraries and Frameworks</h5>
-			<div class="images-container">
-			{libraries.map(library => (
-				<img
-				src={`../../public/assets/stack-icons/${library.path}`}
-				alt={library.alt}
-				class={`logo ${library.modeClasses.join(' ')}`}
-				/>
-			))}
-			</div>
-		</div>
+		<SkillCategory title="Libraries and Frameworks" skills={libraries} />
 
-		<!-- Render Databases -->
-			<div class="combined-row">
-				<div>
-					<h5>Databases</h5>
-					<div class="images-container">
-					{databases.map(skill => (
-						<img
-						src={`../../public/assets/stack-icons/${skill.path}`}
-						alt={skill.alt}
-						class={`logo ${skill.modeClasses.join(' ')}`}
-						/>
-					))}
-					</div>
-				</div>
+		<!-- Render Databases and Others-->
+		<div class="combined-row">
+			<SkillCategory title="Databases" skills={databases} />
 
-			<!-- Render Others -->
-			<div>
-				<h5>Others</h5>
-				<div class="images-container">
-				{others.map(skill => (
-					<img
-					src={`../../public/assets/stack-icons/${skill.path}`}
-					alt={skill.alt}
-					class={`logo ${skill.modeClasses.join(' ')}`}
-					/>
-				))}
-				</div>
-			</div>
+			<SkillCategory title="Others" skills={others} />
 		</div>
-	</div>
+	 </div>
 </section>
 
 <style>
-	:global(.theme-dark) .logo.light-mode-only {
-		display: none;
-	}
-
-	:global(html:not(.theme-dark)) .logo.dark-mode-only {
-		display: none;
-	}
 	.section {
 		gap: 2rem;
 		margin-top: 2rem;
@@ -115,20 +64,6 @@ const others = [
 
 	.skills-content {
 		margin-top: 2rem;
-	}
-
-	.images-container {
-		display: flex;
-		justify-content: left;
-		gap: 1rem;
-		padding: 1rem;
-		flex-wrap: wrap;
-		max-width: 100%;
-	}
-	.logo {
-		width: 65px;
-		height: 65px;
-		object-fit: cover;
 	}
 
 	.combined-row {
