--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,8 +7,8 @@ import type { iconPaths } from './IconPaths';
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Home', href: '/' },
 	{ label: 'About', href: '/#about' },
-	{ label: 'Skill', href: '/#skills' },
-	{ label: 'Work', href: '/#work' },
+	{ label: 'Skill', href: '/#skill' },
+	{ label: 'Project', href: '/#project' },
 ];
 
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
