--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -1,22 +1,31 @@
 ---
-import type { CollectionEntry } from 'astro:content';
+import type { iconPaths } from './IconPaths';
 
 interface Props {
-	project: CollectionEntry<'work'>;
+	title: string;
+	description: string;
+	image: string;
+	code: string;
+	site: string;
+	techStack: string[];
 }
 
-const { data, slug } = Astro.props.project;
+const { title, description, image, code, site, techStack } = Astro.props;
 ---
 
-<a class="card" href={`/work/${slug}`}>
-	<span class="title">{data.title}</span>
-	<img src={data.img} alt={data.img_alt || ''} loading="lazy" decoding="async" />
-</a>
+<div class="card">
+	<!-- Circle icon for gitHub and site link -->
+	<span class="title">{title}</span>
+	<span class="description">{description}</span>
+	<!-- Show tech stack as a flex in a row or two rows if more -->
+	<img src={image} alt={title} loading="lazy" decoding="async" /> 
+</dvi>
 
 <style>
 	.card {
+		position: relative;
 		display: grid;
-		grid-template: auto 1fr / auto 1fr;
+		grid-template: auto / auto .6fr;
 		height: 11rem;
 		background: var(--gradient-subtle);
 		border: 1px solid var(--gray-800);
@@ -34,7 +43,7 @@ const { data, slug } = Astro.props.project;
 		box-shadow: var(--shadow-md);
 	}
 
-	.title {
+	/* .title {
 		grid-area: 1 / 1 / 2 / 2;
 		z-index: 1;
 		margin: 0.5rem;
@@ -42,17 +51,20 @@ const { data, slug } = Astro.props.project;
 		background: var(--gray-999);
 		color: var(--gray-200);
 		border-radius: 0.375rem;
-	}
+	} */
 
 	img {
-		grid-area: 1 / 1 / 3 / 3;
+		position: absolute;
+		grid-area: 1 / 2 / 1 / 2;
 		width: 100%;
-		height: 100%;
-		object-fit: cover;
+		height: 70%;
+		align-self: center;
+		border-radius: 1rem 0 0 1rem;
 	}
 
 	@media (min-width: 50em) {
 		.card {
+			grid-template: auto / .7fr auto;
 			height: 22rem;
 			border-radius: 1.5rem;
 		}
