--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,4 @@
 ---
-import { getCollection } from 'astro:content';
-
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from '../layouts/BaseLayout.astro';
 
@@ -16,13 +14,31 @@ import About from '../components/About.astro';
 import ContactCTA from '../components/ContactCTA.astro';
 import Skills from '../components/Skills.astro';
 
-// Content Fetching: List four most recent work projects
-const projects = (await getCollection('work'))
-	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-	.slice(0, 4);
-
+const projects = [
+	{
+		title: "Project 1",
+		description: "This is the my first project",
+		image: "../../assets/stock-1.jpg",
+		code: "https://github.com/SDemero/capstone-client",
+		site: "https://ttp-capstone-investedfitness.netlify.app/",
+		techStack: [
+			"../../assets/stack-icons/html5.svg",
+			"../../assets/stack-icons/css3.jpg",
+		]
+	},
+	{
+		title: "Project 2",
+		description: "This is the my first project",
+		image: "../../assets/stock-2.jpg",
+		code: "https://github.com/SDemero/capstone-client",
+		site: "https://ttp-capstone-investedfitness.netlify.app/",
+		techStack: [
+			"../../assets/stack-icons/html5.svg",
+			"../../assets/stack-icons/css3.jpg",
+		]
+	}
+]
 ---
-
 <BaseLayout>
 	<div class="stack gap-20 lg:gap-48">
 		<div class="wrapper stack gap-8 lg:gap-20">
@@ -45,26 +61,28 @@ const projects = (await getCollection('work'))
 				/>
 			</header>
 			<About />
-
-			<Skills />
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
-			<section class="section with-background" id="work">
+			<Skills />
+			<section class="section with-background" id="project">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>My Projects</h3>
 					<p>See my most recent projects below to get an idea of my past experience.</p>
 				</header>
 
 				<div class="gallery">
-					<Grid variant="offset">
-						{
-							projects.map((project) => (
-								<li>
-									<PortfolioPreview project={project} />
-								</li>
-							))
-						}
+					<Grid>
+						{projects.map(project => (
+							<PortfolioPreview 
+								title={project.title}
+								description={project.description}
+								image={project.image}
+								code={project.code}
+								site={project.site}
+								techStack={project.techStack}
+							/>
+						))}
 					</Grid>
 				</div>
 			</section>
@@ -212,6 +230,11 @@ const projects = (await getCollection('work'))
 		.gallery {
 			grid-area: gallery;
 		}
+
+		/* .gallery-container {
+			max-width: 800px;
+			margin: 0 auto;
+		} */
 
 		.cta {
 			grid-area: cta;
