--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import { projects } from "./ProjectPaths";
 <section class="section" id="project">
     <SubHeader 
         header="My Projects" 
-        description="See my most recent projects below to get an idea of my past experience.">
+        description="Uncover the stories behind my projects, where programming expertise meets creative vision to bring ideas to life.">
     </SubHeader>
 
     <div class="gallery">
