--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,10 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			Designed & Developed with <a href="https://astro.build/">Astro</a>
+			Designed & Developed by Daniel Ho
 			<Icon icon="rocket-launch" size="1.2em" />
 		</p>
-		<p>&copy; {currentYear} Daniel Ho</p>
+		<!-- <p>&copy; {currentYear} Daniel Ho</p> -->
 	</div>
 	<p class="socials">
 		<a href="https://www.linkedin.com/in/daniel-ho7/">LinkedIn</a>
@@ -28,17 +28,17 @@ const currentYear = new Date().getFullYear();
 		font-size: var(--text-sm);
 	}
 
-	footer a {
+	/* footer a {
 		color: var(--gray-400);
 		text-decoration: 1px solid underline transparent;
 		text-underline-offset: 0.25em;
 		transition: text-decoration-color var(--theme-transition);
-	}
+	} */
 
-	footer a:hover,
+	/* footer a:hover,
 	footer a:focus {
 		text-decoration-color: currentColor;
-	}
+	} */
 
 	.group {
 		display: flex;
