--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -7,7 +7,8 @@
 		gap: 0.5rem;
 		color: var(--accent-text-over);
 		border: 1px solid var(--accent-regular);
-		background-color: var(--accent-regular);
+		background: var(--gradient-accent);
+		box-shadow: var(--shadow-md);
 		border-radius: 999rem;
 		font-size: var(--text-md);
 		line-height: 1.35;
